2003-06-06  Takashi Iwai <tiwai@suse.de>

	* timidity/aRts_a.c (output_data, open_output): Fix typo

2003-06-05  mput <root@mput.dip.jp>

	* timidity/timidity.c (main): Add check codes for interface
	  exsitence (thanks Bernhard Rosenkraenzer <bero@redhat.com>)

	* timidity/arts_a.c, timidity/output.c: Merged Bernhard
	  Rosenkraenzer <bero@redhat.com> 's implementation.

	* configure.in: Fix to fit with David's patch

	* timidity/esd_a.c (open_output, close_output): dlopen() libesd
	  rather than introducing yet another requirement (thanks David
	  Walser and Bernhard Rosenkraenzer <bero@redhat.com>)

	* timidity/timidity.h (MAIL_DOMAIN): to localhost (thanks David
	  Walser and Maurizio De Cecco)

2003-06-04  Saito <timidity@flashmail.com>

	* timidity/playmidi.[ch], timidity/readmidi.[ch],
	  timidity/rcp.c, timidity/timidity.c, timidity/reverb.c,
	  timidity/resample.c:
	  Fix in channel layer.
	  Change default -N to 0.

2003-06-04  mput <root@mput.dip.jp>

	* Makefile.am (dist-hook): Bug fix
	* configure.in,autoconf/Makefile.boot: modernize

2003-06-02  mput <root@mput.dip.jp>

	* bootstrap.sh: Fix to use make
	* configure.in: Fix to fit the adding files
	* autoconf/Makefile.am, autoconf/Makefile.boot,
	  autoconf/Makefile.in, configs/Makefile.am, configs/Makefile.in:
	  Add.

2003-06-01  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/effect.c (do_effect): Do not do reverb or chorus if
	  do_compute_data_midi() has already applied them with
	  USE_DSP_EFFECT.

	* timidity/playmidi.c (new_chorus_voice_alternate): opt_surround
	  update to work with the new effects
	(adjust_panning): Hack to handle -EFchorus=2 in a "reasonable" way

2003-05-30  Kentaro Sato <kentaro@ps.catv.ne.jp>

	* timidity/resample.c, recache.c:
	 Fix LAGRANGE_INTERPOLATION for uint32.

2003-05-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/reverb.[ch], timidity/timidity.[ch]:
	  Support for command line option below.